syntax = "proto3";

package pb;

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";


message TradeStreamRequest {
  repeated string symbols = 1;
}

message Trade {
  string symbol = 1;       
  double price = 2;        
  double quantity = 3;     
  int64 trade_id = 4;     
  int64 event_time = 5;    
  int64 trade_time = 6;    
  bool is_buyer_maker = 7; 
  string raw_json = 8;     
}
